--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,9 @@
     <dependencies>
 
         <dependency>
-        <groupId>com.oracle</groupId>
+        <groupId>com.oracle.ojdbc</groupId>
         <artifactId>orai18n</artifactId>
-        <version>11.1.0.7.0</version>
+        <version>19.3.0.0</version>
         </dependency>
 
         <dependency>
@@ -75,6 +75,16 @@
         <dependency>
             <groupId>org.springframework.session</groupId>
             <artifactId>spring-session-core</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
     </dependencies>
